--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,61 @@ services:
     depends_on:
       - zookeeper
 
-# TODO добавить сервисы
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - "6379:6379"
+  gateway_service:
+    build: services
+    container_name: gateway_service
+    restart: always
+    ports:
+      - "8080:80"
+    depends_on:
+      - library_system
+      - rating_system
+      - reservation_system
+    volumes:
+      - ./services/gateway_service:/var/www/html
+      - ./services/db_connect:/var/www/html/db_connect
+
+  reservation_system:
+    build: services
+    container_name: reservation_system
+    restart: always
+    ports:
+      - "8070:80"
+    depends_on:
+      - postgres
+    volumes:
+      - ./services/reservation_system:/var/www/html
+      - ./services/db_connect:/var/www/html/db_connect
+
+  library_system:
+    build: services
+    container_name: library_system
+    restart: always
+    ports:
+      - "8060:80"
+    depends_on:
+      - postgres
+    volumes:
+      - ./services/library_system:/var/www/html
+      - ./services/db_connect:/var/www/html/db_connect
+
+  rating_system:
+    build: services
+    container_name: rating_system
+    restart: always
+    ports:
+      - "8050:80"
+    depends_on:
+      - postgres
+    volumes:
+      - ./services/rating_system:/var/www/html
+      - ./services/db_connect:/var/www/html/db_connect
 
 volumes:
   db-data:
