--- a/services/gateway_service/composer.json
+++ b/services/gateway_service/composer.json
@@ -4,6 +4,7 @@
     "type": "project",
     "require": {
         "leocarmo/circuit-breaker-php": "^5.0.0",
-        "guzzlehttp/guzzle": "^7.5.0"
+        "guzzlehttp/guzzle": "^7.5.0",
+        "firebase/php-jwt": "^6.4.0"
     }
 }
