--- a/services/identity_provider/composer.json
+++ b/services/identity_provider/composer.json
@@ -3,6 +3,8 @@
     "description": "Simple PHP Composer app",
     "type": "project",
     "require": {
+        "leocarmo/circuit-breaker-php": "^5.0.0",
+        "guzzlehttp/guzzle": "^7.5.0",
         "firebase/php-jwt": "^6.4.0"
     }
 }
