--- a/services/Dockerfile
+++ b/services/Dockerfile
@@ -10,12 +10,26 @@ RUN apt-get update && apt-get install -y \
     git \
     libpq-dev
 
+# extensions
 RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
     && docker-php-ext-install pdo pdo_pgsql pgsql zip
 
+# REDIS
 RUN pecl install -o -f redis \
     && rm -rf /tmp/pear \
     && docker-php-ext-enable redis
 
+# KAFKA
+RUN git clone --depth 1 https://github.com/edenhill/librdkafka.git \
+    && ( \
+        cd librdkafka \
+        && ./configure \
+        && make \
+        && make install \
+    ) \
+    && pecl install rdkafka \
+    && echo "extension=rdkafka.so" > /usr/local/etc/php/conf.d/rdkafka.ini
+
+# COMPOSER
 RUN curl -sS https://getcomposer.org/installer | \
     php -- --install-dir=/usr/bin/ --filename=composer \
