Добавлена возможность редактировать фронт без перезапуска контейнера

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,6 +144,8 @@ services:
       - "3000:3000"
     environment:
       GATEWAY_URL: "http://gateway:8080"
+    volumes:
+      - ./services/frontend/src:/app/src
 
 volumes:
   db-data:
